[package]
name = "google-jwt-verify"
version = "0.4.0"
authors = ["Nathan Fox <fuchsnj@gmail.com>"]
readme = "README.md"
repository = "https://github.com/fuchsnj/google-jwt-verify"
license = "MIT/Apache-2.0"
description = """
A client to verify Google JSON web tokens
"""
edition = "2021"

[features]
default = ["blocking"]
async = ["async-trait", "tokio"]
blocking = ["reqwest/blocking"]

[dependencies]
async-trait = {version = "0.1", optional = true}
openssl = "0.10"
base64 = "0.11.0"
serde = "1"
serde_json = "1"
serde_derive = "1"
reqwest = {version= "0.11" }
headers = "0.3"
tokio = {version = "1", optional = true}

[dev-dependencies]
tokio = {version = "1.28", features = ["macros"]}
futures = "0.3"
